all-services-loadbalancers.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-gateway-lb
  namespace: go-microservice
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: api-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: client-lb
  namespace: go-microservice
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: client
---
apiVersion: v1
kind: Service
metadata:
  name: inventory-service-lb
  namespace: go-microservice
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8082
    protocol: TCP
    name: http
  selector:
    app: inventory-service
---
apiVersion: v1
kind: Service
metadata:
  name: order-service-lb
  namespace: go-microservice
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8083
    protocol: TCP
    name: http
  selector:
    app: order-service
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service-lb
  namespace: go-microservice
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8084
    protocol: TCP
    name: http
  selector:
    app: payment-service
---
apiVersion: v1
kind: Service
metadata:
  name: product-service-lb
  namespace: go-microservice
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8081
    protocol: TCP
    name: http
  selector:
    app: product-service
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service-lb
  namespace: go-microservice
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8085
    protocol: TCP
    name: http
  selector:
    app: notification-service
